# wgpu_sotrh

./: Cargo.toml
src/: lib.rs  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
