[package]
name = "wgpu_sotrh"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = {version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
pollster = "0.3"
bytemuck = {version = "1.16", features = ["derive"]}
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "3.2", default-features = false, features = ["async"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[lib]
crate-type = ["rlib"]
